test/Fail/Issue3853.agda
postulate
  A : Set
  B : A → Set

T : _
T = (@0 x : A) → B x
